setup user activation enpoints
